# CICD

./: CMakeLists.txt  README.md  abc.ipynb
.github/workflows/: ci.yml
include/my_cmake_project/: my_header.h
src/: main.cpp  my_functions.cpp
